19990709-10:50 CET Eddie Runia <eddie@runia.com>
  * tests/working/*.prg
    identified my tests and moved them to the PD

19990709-10:30 CET Felipe Coury
  * tests/working/hscript/hscript.prg; tests/working/hscript/*.hs
    Copyright & GPL inserted


19990708-20:05 EDT David G. Holm <dholm@jsd-llc.com>
 + Added my email address to my Coypright notice in each of the following:
  * include/fileio.ch
  * include/filesys.api
  * include/filesys.h
  * include/set.ch
  * include/set.h
  * include/version.h
  * source/rtl/console.c
  * source/rtl/dates.c
  * source/rtl/devoutp.prg
  * source/rtl/set.c
  * source/rtl/strcmp.c
  * tests/working/output.prg
  * tests/working/round.prg
  * tests/working/scroll.prg
  * tests/working/seconds.prg
  * tests/working/version.prg

19990708-18:20 EDT David G. Holm <dholm@jsd-llc.com>
  * makefile.icc
    + Have to create a dummy unistd.h in the include directory after
      running bison and then delete it after building harbour.exe,
      because GNU bison adds "#include <unistd.h>" for C++ mode, but
      the IBM Visual Age C++ 3.0 compiler doesn't have such a file.
  * config/dos/global.cf
    Added individual -$(RM) commands for *.bak, *.obj, core, and *.o,
    because the COMMAND.COM DEL command won't take more than one target.
  * include/fileio.ch
    + Added copyright and license header and filled in version history
  * include/filesys.api
    + Added copyright and license header and filled in version history
  * include/filesys.h
    + Added copyright and license header and filled in version history
  * include/set.ch
    + Added copyright and license header and filled in version history
  * include/set.h
    + Added copyright and license header and filled in version history

19990708-22:00 Bruno Cantero <bruno@issnet.net>
CVSed by Andi Jahja <andij@aonlippo.co.id>

   Applying undocumented calling to _par*() and _stor*()
   providing a -1 as the first parameter will access the item